--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.forgerock</groupId>
+        <groupId>org.forgerock.ce</groupId>
         <artifactId>forgerock-parent</artifactId>
         <version>1.1.0</version>
     </parent>
-    <groupId>org.forgerock.commons</groupId>
+    <groupId>org.forgerock.ce.commons</groupId>
     <artifactId>forgerock-rest</artifactId>
     <version>2.0.4</version>
     <packaging>pom</packaging>
@@ -29,36 +29,14 @@
     <description>Common resource-oriented libraries used by ForgeRock projects</description>
     <url>http://commons.forgerock.org/forgerock-rest</url>
     <issueManagement>
-        <system>Jira</system>
-        <url>https://bugster.forgerock.org/jira/browse/CREST</url>
+        <system>GitHub Issues</system>
+        <url>https://github.com/ForgeRock/forgerock-rest-community-edition/issues</url>
     </issueManagement>
     <scm>
-        <url>https://svn.forgerock.org/commons/forgerock-rest/tags/forgerock-rest-2.0.4</url>
-        <connection>scm:svn:https://svn.forgerock.org/commons/forgerock-rest/tags/forgerock-rest-2.0.4</connection>
-        <developerConnection>scm:svn:https://svn.forgerock.org/commons/forgerock-rest/tags/forgerock-rest-2.0.4</developerConnection>
+        <url>https://github.com/ForgeRock/forgerock-rest-community-edition</url>
+        <connection>scm:git://github.com:ForgeRock/forgerock-rest-community-edition.git</connection>
+        <developerConnection>scm:git://github.com:ForgeRock/forgerock-rest-community-edition.git</developerConnection>
     </scm>
-    <ciManagement>
-        <system>jenkins</system>
-        <url>http://builds.forgerock.org/job/Commons%20-%20ForgeRock%20REST/</url>
-        <notifiers>
-            <notifier>
-                <type>mail</type>
-                <sendOnError>true</sendOnError>
-                <sendOnFailure>true</sendOnFailure>
-                <sendOnSuccess>false</sendOnSuccess>
-                <sendOnWarning>false</sendOnWarning>
-                <!-- TODO: need mailing list -->
-                <address>opendj-dev@forgerock.org</address>
-            </notifier>
-        </notifiers>
-    </ciManagement>
-    <distributionManagement>
-        <site>
-            <id>forgerock.org</id>
-            <name>ForgeRock Community</name>
-            <url>scp://forgerock.org/var/www/vhosts/commons.forgerock.org/httpdocs/forgerock-rest</url>
-        </site>
-    </distributionManagement>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>1.6</maven.compiler.target>
@@ -126,12 +104,12 @@
                 <version>1.9.2</version>
             </dependency>
             <dependency>
-                <groupId>org.forgerock.commons</groupId>
+                <groupId>org.forgerock.ce.commons</groupId>
                 <artifactId>json-fluent</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.forgerock.commons</groupId>
+                <groupId>org.forgerock.ce.commons</groupId>
                 <artifactId>forgerock-util</artifactId>
                 <version>1.3.5</version>
             </dependency>
@@ -180,20 +158,9 @@
     </reporting>
     <repositories>
         <repository>
-            <id>forgerock-staging-repository</id>
-            <name>ForgeRock Release Repository</name>
-            <url>http://maven.forgerock.org/repo/releases</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>forgerock-snapshots-repository</id>
-            <name>ForgeRock Snapshot Repository</name>
-            <url>http://maven.forgerock.org/repo/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
+            <id>forgerock-community-repository</id>
+            <name>ForgeRock Community Repository</name>
+            <url>http://maven.forgerock.org/repo/community</url>
         </repository>
     </repositories>
 </project>
