--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.forgerock</groupId>
+        <groupId>org.forgerock.ce</groupId>
         <artifactId>forgerock-parent</artifactId>
         <version>1.1.0</version>
     </parent>
-    <groupId>org.forgerock.commons</groupId>
+    <groupId>org.forgerock.ce.commons</groupId>
     <artifactId>forgerock-rest</artifactId>
     <version>2.0.2</version>
     <packaging>pom</packaging>
@@ -120,14 +120,14 @@
                 <version>1.9.2</version>
             </dependency>
             <dependency>
-                <groupId>org.forgerock.commons</groupId>
+                <groupId>org.forgerock.ce.commons</groupId>
                 <artifactId>json-fluent</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.forgerock.commons</groupId>
+                <groupId>org.forgerock.ce.commons</groupId>
                 <artifactId>forgerock-util</artifactId>
-                <version>1.1.0</version>
+                <version>1.2.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -174,20 +174,9 @@
     </reporting>
     <repositories>
         <repository>
-            <id>forgerock-staging-repository</id>
-            <name>ForgeRock Release Repository</name>
-            <url>http://maven.forgerock.org/repo/releases</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>forgerock-snapshots-repository</id>
-            <name>ForgeRock Snapshot Repository</name>
-            <url>http://maven.forgerock.org/repo/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
+            <id>forgerock-community-repository</id>
+            <name>ForgeRock Community Repository</name>
+            <url>http://maven.forgerock.org/repo/community</url>
         </repository>
     </repositories>
 </project>
